# application-architecture

./: .env.composefile  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.backend  .gitignore
backend/app/base/: app.py  main.py  pyproject.toml
backend/app/base/sample/: async-sample.py
backend/app/base/sample/tutorial/: 03-04-path-query-params.py  05-request-body.py
backend/app/fastapi-tutorial/: Dockerfile  main.py
backend/app/fastapi-tutorial/sample/tutorial/: 06-07-path-parameters-and-numeric-validations.py.py  08-body-multiple-parameters.py  09-10-body-nested-fields.py  09-10-body-nested-models-error-Literal-Enum.json  11-schema-extra.py
backend/db/mysql/init.d/: init.sql
backend/nginx/: Dockerfile  nginx.conf
frontend/: .dockerignore  .env.frontend
frontend/base/: Dockerfile  package.json
