[tool.poetry]
authors = ["nukopy <pytwbf201830@gmail.com>"]
description = "examples of various application architectures"
name = "application-architecture"
version = "0.1.0"

[tool.poetry.dependencies]
PyMySQL = "^0.10.1"
SQLAlchemy = "^1.3.19"
fastapi = "^0.61.1"
python = "^3.8"
uvicorn = "^0.12.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
ipython = "^7.15.0"
pytest = "^5.4.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
